Update VAE configs, training script, and debugging utilities

--- a/virtual_ihc_diffusion/configs/full_vae_h200_max.yaml
+++ b/virtual_ihc_diffusion/configs/full_vae_h200_max.yaml
@@ -1,56 +1,53 @@
-# configs/full_vae_h200_max.yaml
+# VAE Training Configuration (Diffusers) - Memory Optimized
+# Smaller model for L40S GPUs
+# Date: 2025-12-02
+
 experiment:
-  name: "vae_h200_ultra"
-  description: "Ultra-large VAE - Maximum capacity for H200"
+  name: "vae_diffusers_small"
+  description: "Memory-optimized VAE with diffusers"
   seed: 42
 
 data:
   root_dir: /orcd/home/002/tomli/orcd/scratch/data/mist_her2/HER2_raw/HER2/TrainValAB
   image_size: 256
-  batch_size: 96              # May need to reduce to 64-96 for ultra model
-  num_workers: 2
-  cache_rate: 0.0              # Don't cache for faster startup
-  persistent_workers: true
-  prefetch_factor: 2
+  batch_size: 8               # REDUCED from 16
+  num_workers: 2              # REDUCED from 4
+  cache_rate: 0.0             # No cache to save memory
 
 model:
   type: "latent_diffusion"
 
+  # VAE - SMALLER channels
   autoencoder:
-    spatial_dims: 2
     in_channels: 3
     out_channels: 3
-    channels: [128, 256, 512, 1024]     # WIDER (2x current)
-    latent_channels: 24                  # LARGER latent (2x current)
-    num_res_blocks: 3                    # MORE blocks (was 3)
-    attention_levels: [false, false, true, true]  # MORE attention
+    channels: [64, 128, 256, 256]      # REDUCED from [128,256,512,512]
+    latent_channels: 4
+    num_res_blocks: 1                  # REDUCED from 2
+    sample_size: 256
 
-  # Scale up U-Net accordingly
   unet:
-    spatial_dims: 2
-    in_channels: 64                      # 32 latent * 2
-    out_channels: 32
-    channels: [256, 512, 1024, 1536]     # Larger U-Net
-    attention_levels: [false, true, true, true]
+    in_channels: 8
+    out_channels: 4
+    channels: [256, 512, 768, 1024]
     num_head_channels: 64
-    num_res_blocks: 3
+    num_res_blocks: 2
 
   scheduler:
     type: "DDIM"
     num_train_timesteps: 1000
-    schedule: "scaled_linear_beta"
     beta_start: 0.0015
     beta_end: 0.0195
-    clip_sample: False
+    clip_sample: false
 
   conditioning:
-    use_classifier_free_guidance: True
-    guidance_scale: 7.5
+    use_classifier_free_guidance: true
+    guidance_scale: 5.0
     unconditional_prob: 0.1
 
 training:
   num_epochs: 50
-  learning_rate: 0.0001 
+  learning_rate: 0.0001
   weight_decay: 0.00001
   optimizer: "AdamW"
   
@@ -66,11 +63,11 @@ training:
   save_top_k: 5
   monitor: "val_loss"
 
-  log_interval: 5
-  val_interval: 5
+  log_interval: 10
+  val_interval: 1
 
-  use_amp: True
-  gradient_clip_val: 0.5
+  use_amp: true                        # Keep AMP for memory savings
+  gradient_clip_val: 1.0
 
 evaluation:
   metrics:
@@ -86,5 +83,5 @@ paths:
 
 hardware:
   device: "cuda"
-  num_gpus: 8                        # 8x H200!
-  distributed: True
+  num_gpus: 2
+  distributed: false
