--- a/virtual_ihc_diffusion/configs/prod.yaml
+++ b/virtual_ihc_diffusion/configs/prod.yaml
@@ -1,97 +1,74 @@
-# Fast Training Configuration for Virtual IHC Staining
-# Version: 0.1-fast
-# Date: 2025-11-20
-# Optimizations: Less frequent validation, faster sampling, larger batch, fewer epochs
-
 experiment:
-  name: "virtual_ihc_v0.2_fast"
-  description: "Fast training - reduced validation and sampling for quick iteration"
+  name: "he_to_ihc_sd_vae"
+  description: "Using pretrained Stable Diffusion VAE"
   seed: 42
 
 data:
   root_dir: /orcd/home/002/tomli/orcd/scratch/data/mist_her2/HER2_raw/HER2/TrainValAB
   image_size: 256
-  batch_size: 8
-  num_workers: 6
-  cache_rate: 1.0
-
-  # max_train_samples: 1000   # use only 2k pairs for training
-  # max_val_samples: 200   
-
+  batch_size: 32
+  num_workers: 4
+  cache_rate: 0.5
+  persistent_workers: true
+  prefetch_factor: 2
 
 model:
   type: "latent_diffusion"
-
-  # VAE/AutoencoderKL
+  
+  # VAE - MATCHES SD VAE EXACTLY
   autoencoder:
-    spatial_dims: 2
     in_channels: 3
     out_channels: 3
-    channels: [32, 64, 128]  # Must match what you used in VAE pretraining!
-    latent_channels: 3  # Must match what you used in VAE pretraining!
-    num_res_blocks: 1
-    attention_levels: [False, False, True]
+    channels: [128, 256, 512, 512]     # SD VAE architecture
+    latent_channels: 4                 # SD VAE
+    num_res_blocks: 2                  # SD VAE (layers_per_block)
+    sample_size: 256
 
-  # UNet - Much larger for better quality
+  # UNet
   unet:
-    spatial_dims: 2
-    in_channels: 6            # 2 * latent_channels
-    out_channels: 3           # Same as latent_channels
-    channels: [128, 256, 512, 512]  # Much larger! (was [32, 64, 128])
-    attention_levels: [False, True, True, True]  # More attention layers
-    num_head_channels: 32     # Increased from 8
-    num_res_blocks: 2         # More residual blocks per level
+    in_channels: 8                     # 4 (latent) + 4 (conditioning)
+    out_channels: 4
+    channels: [256, 384, 512]
+    num_head_channels: 64
+    num_res_blocks: 2
 
-  # Diffusion scheduler
   scheduler:
     type: "DDIM"
     num_train_timesteps: 1000
-    schedule: "scaled_linear_beta"
     beta_start: 0.0015
     beta_end: 0.0195
-    clip_sample: False
+    clip_sample: false
 
-  # Conditioning
   conditioning:
-    use_classifier_free_guidance: True
-    guidance_scale: 7.5
+    use_classifier_free_guidance: true
+    guidance_scale: 3.0
     unconditional_prob: 0.1
 
 training:
-  num_epochs: 200  # Reduced from 200 for faster completion
-  learning_rate: 1e-4
-  weight_decay: 1e-5
+  num_epochs: 100
+  learning_rate: 0.0001
+  weight_decay: 0.00001
   optimizer: "AdamW"
+  
   lr_scheduler:
     type: "CosineAnnealingLR"
-    T_max: 200  # Updated to match num_epochs
-    eta_min: 1e-6
+    T_max: 100
+    eta_min: 0.000001
 
-  # Loss
   loss:
     type: "MSE"
-
-  # Checkpointing
-  save_interval: 10  # Save every 20 epochs (less frequent)
+  save_interval: 10
   save_top_k: 5
   monitor: "val_loss"
-
-  # Logging
-  log_interval: 1
-  val_interval: 5  # Validate every 20 epochs (4x less frequent!)
-
-  # Mixed precision
-  use_amp: True
-
-  # Gradient clipping
+  log_interval: 10
+  val_interval: 5
+  use_amp: true
   gradient_clip_val: 1.0
 
 evaluation:
-  metrics:
-    - "PSNR"
-    - "SSIM"
-  num_samples: 8  # Reduced from 10 (2.5x fewer samples)
-  inference_steps: 100  # Reduced from 50 (5x faster!)
+  metrics: ["PSNR", "SSIM"]
+  num_samples: 4
+  inference_steps: 50
 
 paths:
   checkpoint_dir: "checkpoints"
@@ -100,5 +77,5 @@ paths:
 
 hardware:
   device: "cuda"
-  num_gpus: 1
-  distributed: False
+  num_gpus: 4
+  distributed: false
